# generator

./: .clang-format  .gitignore  AUTHORS.md  CHANGELOG.md  INSTALL.md  README.md  TODO.md  justfile  meson.build  meson_options.txt
cmz80/: z80.c  z80stb.h  z80stbd.h
cpu68k/: def68k-proto.h  def68k.c  gen68k.c  meson.build
gtkopts/: gtkopts.c  gtkopts.h
hdr/: cpu68k-inline.h  cpuz80.h  generator.h  gensound.h  gensoundp.h  machine.h  mem68k.h  memz80.h  state.h  ui-console.h  ui-gtk4.h  uip.h  uiplot.h  vdp.h
main/: avi.c  cpu68k.c  cpuz80-mz80.c  cpuz80-raze.c  cpuz80.c  dib.c  diss68k.c  event.c  generator.c  gensound.c  gensoundp-allegro.c  gensoundp-sdl2.c  gensoundp-unix.c  initcart.c  mem68k.c  memz80.c  meson.build  patch.c  reg68k.c  snprintf.c  state.c  ui-console.c  ui-gtk4.c  uip-sdl2.c  uiplot.c  vdp.c
raze/: raze.asm  raze.asm.in  raze.h  raze.reg  spec.c  spec.h  spechelp.c
src/audio/: gensound.c  meson.build
src/audio/sn76496/: meson.build  sn76496.c
src/audio/ym2612/: driver.h  fm.c  fm.h  fmext.c  meson.build
src/cmz80/: cmz80.h  meson.build  z80.c
src/core/: gen_context.c  gen_core.c  gen_ui_callbacks.c  meson.build
src/cpu/: meson.build
src/cpu/68k/: mem68k.c  meson.build
src/cpu/68k/codegen/: def68k-iibs.h  meson.build
src/cpu/68k/codegen/test/: test-abcd.c  test-sbcd.c
src/cpu/z80/: cpuz80-mz80.c  meson.build
src/cpu/z80/cmz80/: meson.build
src/cpu/z80/raze/: makefile  meson.build  spec.c  spec.h  spechelp.c
src/cpu68k/: def68k-funcs.h  def68k.c  meson.build  tab68k.c
src/data/: logo.c  meson.build
src/gtkopts/: gtkopts.c  meson.build
src/hdr/: avi.h  cpu68k-inline.h  cpu68k.h  cpuz80.h  gen_compat.h  gen_context.h  gen_core.h  gen_ui_callbacks.h  generator.h  gensound.h  gensoundp.h  machine.h  mem68k.h  registers.h  snprintf.h  ui-gtk4.h  ui.h  uiplot.h  vdp.h
src/main/: cpu68k.c  cpuz80-raze.c  diss68k.c  event.c  font.c  generator.c  gensound.c  gensoundp-allegro.c  gensoundp-sdl2.c  gensoundp-sdl3.c  mem68k.c  meson.build  patch.c  reg68k.c  state.c  ui-console.c  ui-gtk4.c  uiplot.c
src/persist/: avi.c  meson.build  state.c
src/platform/: meson.build
src/platform/sdl3/: gensoundp-sdl3.c  meson.build  uip-sdl3.c
src/raze/: raze.asm  raze.h
src/sn76496/: meson.build  sn76496.c  sn76496.h
src/ui/console/: meson.build  ui-console.c
src/ui/gtk4/: meson.build  ui-gtk4.c
src/ui/gtk4/gtkopts/: gtkopts.c  meson.build
src/ui/headless/: main-headless.c  meson.build  soundp-null.c
src/util/: meson.build  snprintf.c
src/video/: meson.build  uiplot.c
src/xbrz/: meson.build  xbrz_config.h  xbrz_wrapper.h
src/xbrz/xbrz/: xbrz.cpp
src/ym2612/: driver.h  fm.c  fm.h  genstate.h  meson.build
xbrz/: xbrz.h  xbrz_config.h  xbrz_tools.h  xbrz_wrapper.cpp  xbrz_wrapper.h
ym2612/: fm.c  support.h
