# Motorola 68000 CPU Emulation
# Code generation and runtime support

# Code generation for 68k instruction set
subdir('codegen')

# 68k CPU source files (runtime)
cpu68k_runtime_sources = files(
  'cpu68k.c',
  'mem68k.c',
  'reg68k.c',
  'diss68k.c'
)

# Export sources for main executable
cpu68k_sources = cpu68k_runtime_sources
